--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <select id="genreList" name="">
         
             </select>
-            <button id = "filterButton" type="button" name="filterButton">Filter Results</button>
+            <button id = "filterButton" type="button" name="filterButton">Filter</button>
         </form>
     </body>
     <script src = "getData.js">
